Cookie set only when user refreshes rather than when clicking around. Updated example with font size on mobile Chrome Fixes.

--- a/demo/tstyle.css
+++ b/demo/tstyle.css
@@ -1,9 +1,10 @@
-body {text-align: center;}
-h1 {font-family: Arial, sans-serif; font-size: 18px; color: #454545; font-weight: bold;}
-.togglr {width: 500px; margin: 20px auto; text-align: left;}
-.ttoggle {font-family: Arial; border-radius: 10px; font-size: 18px; border: 1px #454545 solid; margin-bottom: 20px; padding: 3px 10px; width: 20%; text-align: center;}
-.ttitle, .ttitle.topen {font-family: Arial; border-radius: 10px; font-size: 16px; border: 1px #52D200 solid; margin-top: 10px; padding: 10px; background-repeat: no-repeat; background-position: right center;}
-.ttitle {background-image: url('ad.png'); font-size: 16px;}
-.ttitle.topen {background-image: url('au.png'); font-size: 16px;}
-.tcontent {font-family: Arial; border-radius: 10px; font-size: 16px; border: 1px #E8E8E8 solid; margin-bottom: 10px; padding: 10px; background: #F2F2F2;}
-.downloadLink {background: #53C953; border: 2px #38B238 solid; font-family: Arial, sans-serif; color: #000000; text-decoration: none; padding: 15px;}
+body, h1 {text-align: center; font-family: Arial, sans-serif; font-size: 16px; color: #454545;}
+h1 {width: 400px; margin: 0px auto;}
+.togglr {width: 400px; margin: 20px auto; text-align: left;}
+.ttoggle {border: 1px #454545 solid; text-align: center; width: 100px; padding: 5px; margin: 5px;}
+.ttitle, .ttitle.topen { border: 1px #52D200 solid; background-repeat: no-repeat; background-position: right center; background-color: #F4FFEE;}
+.ttitle {background-image: url('ad.png');}
+.ttitle.topen {background-image: url('au.png');}
+.tcontent {font-size: 16px; border: 1px #CECECE solid; background: #F2F2F2; font-style:italic;}
+.downloadLink {background: #53C953; border: 2px #38B238 solid; text-decoration: none; color: #ffffff;}
+.ttitle, .tcontent, .downloadLink {padding: 15px 10px; margin:5px;}
